api使用の更新とそれに伴うアップデート
