# server/openapi/main.yml
@@ -1,9 +1,13 @@
-openapi: 3.1.0
+openapi: 3.0.3
 
 info:
   title: 毎日の絵日記
-  summary: 画像から絵日記を生成
-  version: 1.0.1
+  description: 画像から絵日記を生成
+  version: 1.0.2
+
+servers:
+  - url: http://localhost:8000/
+    description: Djangoローカル
 
 paths:
   /api/diary/create/:
@@ -17,51 +21,155 @@ paths:
         content:
           multipart/form-data:
             schema:
-              type: object
-              properties:
-                image:
-                  type: string
-                  format: binary
-                  description: Image file to upload.
+              $ref: '#/components/schemas/diaryCreateRequest'
       responses:
         '201':
           description: Image uploaded successfully
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  image_url:
-                    type: string
-                    format: uri
-                    description: URL of the uploaded image.
-                  diary:
-                    type: string
-                    description: Automatically generated diary entry based on the uploaded image.
-              example:
-                image_url: "https://example.com/media/uploads/image.jpg"
-                diary: "今日の夕暮れ、ふと海辺に立ち寄ると、空と海が美しいパステルカラーに染まっていました..."
-        '400':
-          description: Bad request
+                $ref: '#/components/schemas/diaryCreateResponse'
+  /api/diary/{id}/:
+    put:
+      tags: [Diary]
+      summary: 日記を更新する
+      description: |
+        日記を更新する
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: 日記ID
+          schema:
+            $ref: '#/components/schemas/id'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/diaryPatchRequest'
+      responses:
+        '200':
+          description: Diary updated successfully
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  detail:
-                    type: string
-                    description: Error message describing what went wrong.
-              example:
-                detail: "Invalid image file"
-        '500':
-          description: Internal server error
+                $ref: '#/components/schemas/diaryPatchResponse'
+
+  /api/diary/:
+    get:
+      tags: [Diary]
+      summary: 日記一覧を取得する
+      description: |
+        日記一覧を取得する
+      responses:
+        '200':
+          description: Diary list retrieved successfully
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  detail:
-                    type: string
-                    description: Error message describing the server issue.
-              example:
-                detail: "An error occurred while processing the image"
+                type: array
+                items:
+                  $ref: '#/components/schemas/diaryListResponse'
+
+components:
+  schemas:
+    created_at:
+      type: string
+      example: "2024-09-16T10:35:49.716241+09:00"
+    enable_ai:
+      type: string
+      enum: ["true", "false"]
+    id:
+      type: string
+      format: uuid
+      example: "123e4567-e89b-12d3-a456-426614174000"
+    image:
+      type: string
+      format: binary
+    image_filter:
+      type: string
+      enum:
+        - "blur"
+        - "illustration_style"
+        - "hue_inversion"
+        - "posterization"
+        - "original"
+    text:
+      type: string
+      example: "今日の夕暮れ、ふと海辺に立ち寄ると、空と海が美しいパステルカラーに染まっていました..."
+    title:
+      type: string
+      example: "海辺の日記"
+    url:
+      type: string
+      format: uri
+      example: "https://example.com/media/uploads/image.jpg"
+
+    diaryCreateRequest:
+      type: object
+      properties:
+        enable_ai:
+          $ref: '#/components/schemas/enable_ai'
+        image:
+          $ref: '#/components/schemas/image'
+        image_filter:
+            $ref: '#/components/schemas/image_filter'
+
+    diaryCreateResponse:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/id'
+        title:
+          $ref: '#/components/schemas/title'
+        image_url:
+          $ref: '#/components/schemas/url'
+        text:
+          $ref: '#/components/schemas/text'
+        created_at:
+          $ref: '#/components/schemas/created_at'
+
+    diaryPatchRequest:
+      type: object
+      properties:
+        title:
+          $ref: '#/components/schemas/title'
+        text:
+          $ref: '#/components/schemas/text'
+        created_at:
+          $ref: '#/components/schemas/created_at'
+        image_filter:
+          $ref: '#/components/schemas/image_filter'
+
+    diaryPatchResponse:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/id'
+        title:
+          type: string
+          example: "海辺の日記"
+        image_url:
+          $ref: '#/components/schemas/url'
+        text:
+          type: string
+          example: "夕方の海辺で..."
+        created_at:
+          type: string
+          format: date-time
+          example: "2024-11-13T17:05:00Z"
+    
+    diaryListResponse:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/id'
+        title:
+          $ref: '#/components/schemas/title'
+        image_url:
+          $ref: '#/components/schemas/url'
+        text:
+          $ref: '#/components/schemas/text'
+        created_at:
+          $ref: '#/components/schemas/created_at'
